@@ -3,4 +3,4 @@ release = 1
 packager = Armijn Hemel <armijn@binaryanalysis.org>
 group = Development/Tools
 doc_files = LICENSE README ChangeLog
-requires = python-magic, binutils, e2tools, squashfs-tools, module-init-tools, gzip, xz, zip, unrar, cabextract, p7zip, cpio, tar, bzip2, mtd-utils-ubi, lzip, arj
+requires = python-magic, binutils, e2tools, squashfs-tools, module-init-tools, gzip, xz, zip, unrar, cabextract, p7zip, cpio, tar, bzip2, mtd-utils-ubi, lzip, arj, giflib-utils
